Compare Champions work in progress.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         </activity>
         <activity android:name=".ChampionProfileActivity" />
         <activity android:name=".CompareChampionsActivity" />
-        <activity android:name=".ChampionsActivity"></activity>
+        <activity android:name=".ChampionsActivity" />
+        <activity android:name=".SearchForMatchUpsActivity"></activity>
     </application>
 
 </manifest>
